syntax = "proto3";

package api;

import "google/api/annotations.proto";

// AuthService specifies the interface through which clients authenticate
service AuthService {
        rpc Authenticate(AuthenticateRequest)
                returns (AuthenticateResponse) {
                        option (google.api.http) = {
                                post: "/v0/authenticate"
                                body: "*"
                        };
                }
        rpc SmsCodeCheck(SmsCodeCheckRequest)
                returns (SmsCodeCheckResponse) {
                        option (google.api.http) = {
                                post: "/v0/authenticate/sms-code-check"
                                body: "*"
                        };
                }
}   

message AuthenticateRequest {
    string phone = 1;
}

message AuthenticateResponse {
    string request_id = 1;
}

message SmsCodeCheckRequest {
    string phone = 1;
    string request_id = 2;
    string code = 3;
}

message SmsCodeCheckResponse {
    string token = 1;
    string username = 2;
    uint64 user_id = 3;
}
